# json-diff

./: Cargo.toml  README.md
chats/: 001.md  002.md  2025-05-27.md
docs/: diff_format.md  rules_format.md
json-diff-cli/: Cargo.toml
json-diff-cli/src/: lib.rs
json-diff-core/: Cargo.toml
json-diff-core/src/: compare.rs  diff.rs  error.rs  lib.rs  path.rs
json-diff-display/: Cargo.toml
json-diff-display/src/: lib.rs
src/: main.rs
tests/: README.md  integration_tests.rs  test_ratatui.sh
tests/fixtures/: long1.json  long2.json  profile.toml  sample1.json  sample2.json
