[package]
name = "json-diff-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for JSON comparison and diff generation"

[dependencies]
json-diff-core = { path = "../json-diff-core" }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
